# reglscatterpy

./: .gitignore  LICENSE  MANIFEST.in  README.md  SHOTLIST.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
data-raw/: build_tour.py  make_palettes.R
docs/: api.md  demo.md  demo_plot.html  guide.md  index.md  widget-api.md
notebooks/: reglscatterpy_examples.ipynb  reglscatterpy_tour.ipynb
scripts/: README.md  _capture_frames.mjs  build_demo.py  build_gifs.py  build_screens.py  record_to_gif.sh
src/reglscatterpy/: __init__.py  __main__.py  _compose.py  _config.py  _export.py  _extract.py  _palettes.py  _payload.py  _widget.py  scatterplot.py
src/reglscatterpy/static/: widget.js
tests/: test_export.py  test_extract.py  test_payload_parity.py  test_scatterplot.py
tests/fixtures/: README.md  parity_expected.json
