[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reglscatterpy"
version = "0.3.0"
description = "Interactive WebGL scatterplots for single-cell data (AnnData/MuData/SpatialData) in Jupyter, VS Code and Shiny for Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "George Muñoz" }]
keywords = ["scatterplot", "webgl", "single-cell", "anndata", "scanpy", "visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "pandas",
    # The default renderer: our own anywidget driving the SAME compiled widget
    # the R package ships, so R and Python plots are pixel-identical.
    "anywidget>=0.9",
]

[project.optional-dependencies]
# Alternative backend: jupyter-scatter (the JS author's binding). Optional.
render = ["jupyter-scatter>=0.18"]
anndata = ["anndata"]
mudata = ["mudata"]
spatial = ["spatialdata"]
all = ["jupyter-scatter>=0.18", "anndata", "mudata", "spatialdata"]
dev = ["pytest", "anndata", "scipy", "anywidget>=0.9"]

[project.urls]
Homepage = "https://github.com/george123ya/reglscatterpy"
"Bug Tracker" = "https://github.com/george123ya/reglscatterpy/issues"
"R package" = "https://github.com/george123ya/reglScatterplotR"

[tool.hatch.build.targets.wheel]
packages = ["src/reglscatterpy"]
# Ship the compiled anywidget bundle (its JS source lives in the reglScatterplotR
# repo under js/; this is the vendored build artifact).
artifacts = ["src/reglscatterpy/static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
